@@ -1,3 +1,10 @@
+2008-05-19  Alan Modra  <amodra@bigpond.net.au>
+
+	PR 2995, PR 6473
+	* elf.c (_bfd_elf_make_section_from_shdr): Leave lma equal to
+	vma when all p_paddr fields are zero and there is more than
+	one PT_LOAD header.
+
 2008-05-15  Christophe Lyon  <christophe.lyon@st.com>
 
 	Add long call support for ARM.
